# seaingclearly

./: .dockerfile  .env  .gitignore  PLAN.md  README.md  SeaingClearly_v1.0.0.spec  json.json  pyproject.toml  requirements.txt
app/: app.py
model/: main.py
seaingclearly/: app.py  build.py  config.py
seaingclearly/client/: client.py
seaingclearly/components/: __init__.py  common.py  settings.py  styler.py  util.py  validators.py
seaingclearly/components/widgets/: __init__.py  file_preview.py
seaingclearly/iot/: client.py  main.py  processing.py  service.py  stream_upload.py  util.py
seaingclearly/panels/: __init__.py  file_preview_panel.py  file_selection_panel.py  settings_panel.py  viewer_panel.py
seaingclearly/tests/: test.py
seaserver/: .env  app.py  main.py  processing.py  requirements.txt  test.py
seaserver/templates/: index.html
seaserver/test/: test.py
