[tool.poetry]
name = "seaingclearly"
version = "0.1.0"
description = "A UI, API, and MLM to enable monitoring of prawns"
authors = ["Joseph Thurlow <joseph.thurlow7d0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PySide6 = "^6.7.2"
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
