[tool.poetry]
name = "seaingclearly"
version = "0.1.0"
description = "A UI, API, and MLM to enable monitoring of prawns"
authors = ["Joseph Thurlow <joseph.thurlow7d0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "^6.7.2"
scikit-image = "^0.24.0"
py-hot-reload = "^1.0.6"
opencv-python = "^4.10.0.84"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
pyotp = "^2.9.0"
flask-session = "^0.8.0"
netifaces = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
